# rust-toolkit

./: .gitignore  AGENTS.md  README.md  clippy.toml  flake.nix  justfile  rustfmt.toml
config/: README.md
docs/: consuming_repos.md  repo_layout.md  toolkit-shell.sh  toolkit_repo.md
effects/: Cargo.toml
effects/src/: lib.rs
fixtures/repos/fail_repo/: Cargo.toml  justfile  toolkit.toml
fixtures/repos/fail_repo/.github/workflows/: check.yml
fixtures/repos/fail_repo/crates/core/: Cargo.toml
fixtures/repos/fail_repo/crates/core/src/: lib.rs
fixtures/repos/fail_repo/crates/search/src/: lib.rs
fixtures/repos/fail_repo/crates/traits/: Cargo.toml
fixtures/repos/fail_repo/crates/traits/src/: config.rs  fixed_q32.rs  lib.rs  style.rs
fixtures/repos/fail_repo/crates/traits/src/helper/: tests.rs
fixtures/repos/fail_repo/crates/viewer/src/: lib.rs
fixtures/repos/fail_repo/docs/: 101_introduction.md  claim.md  durable.md  guide.md  parity.md  search.md  viewer.md
fixtures/repos/fail_repo/lean/: Facade.lean  WithSorry.lean
fixtures/repos/pass_repo/: toolkit.toml
fixtures/repos/pass_repo/.github/workflows/: check.yml
fixtures/repos/pass_repo/crates/core/src/: lib.rs
fixtures/repos/pass_repo/crates/search/src/: lib.rs
fixtures/repos/pass_repo/crates/traits/: Cargo.toml
fixtures/repos/pass_repo/crates/traits/src/: config.rs  fixed_q32.rs  lib.rs  style.rs
fixtures/repos/pass_repo/crates/viewer/src/: lib.rs
fixtures/repos/pass_repo/docs/: 101_introduction.md  claim.md  durable.md  guide.md  parity.md  search.md  viewer.md
fixtures/repos/pass_repo/lean/: Facade.lean  NoEscape.lean
lints/: Cargo.toml
lints/.cargo/: config.toml
lints/naked_map_err/: Cargo.toml  README.md
lints/naked_map_err/src/: lib.rs  lint.rs
lints/style_limits/: Cargo.toml
lints/style_limits/src/: lib.rs  long_block.rs  long_file.rs  source_scan.rs
lints/trait_must_use/: Cargo.toml
lints/trait_must_use/src/: lib.rs  lint.rs
lints/trait_purity/: Cargo.toml
lints/trait_purity/src/: lib.rs  lint.rs  source_scan.rs
macros/: Cargo.toml
macros/src/: lib.rs
nix/: flake.nix
scripts/: release-packages.sh  release-publish.sh
trait_contracts/: Cargo.toml
trait_contracts/src/: lib.rs
xtask/: Cargo.toml
xtask/src/: config.rs  legacy.rs  lib.rs  main.rs  report.rs  util.rs
xtask/src/checks/: allow_attribute_guard.rs  annotation_scope.rs  assert_shape.rs  bool_param.rs  ci_assurance_lanes.rs  cloning_boundary.rs  contract_support.rs  crate_root_policy.rs  dependency_policy.rs  doc_coverage.rs  docs_index.rs  docs_link_check.rs  docs_prose_quality.rs  docs_semantic_drift.rs  drop_side_effects.rs  durable_boundaries.rs  fn_length.rs  formal_claim_scope.rs  git_dependency_pins.rs  ignored_result.rs  lean_architecture.rs  lean_escape_hatches.rs  lean_style.rs  limit_constant.rs  mod.rs  must_use_public_return.rs  naming_units.rs  parity_ledger.rs  proc_macro_scope.rs  protocol_machine_placeholders.rs  public_type_width.rs  recursion_guard.rs  result_must_use.rs  rust_architecture.rs  search_boundaries.rs  test_boundaries.rs  text_formatting.rs  unsafe_boundary.rs  unwrap_guard.rs  viewer_tooling_boundaries.rs  (+3 more)
xtask/tests/: check_fixtures.rs
