[workspace]

[package]
name = "rust-toolkit-macros"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
authors = ["Sam Hart"]
description = "Procedural macros for the hxrts toolkit"
homepage = "https://github.com/hxrts/toolkit"
repository = "https://github.com/hxrts/toolkit"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1"
syn = { version = "2", features = ["full"] }
rust-toolkit-trait-contracts = { version = "0.1.0", path = "../trait_contracts" }
