[workspace]

[package]
name = "rust-toolkit-macros"
version = "0.4.1"
edition = "2021"
description = "Proc macros for the rust-toolkit policy framework"
license = "Apache-2.0"
repository = "https://github.com/hxrts/toolkit"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1"
syn = { version = "2", features = ["full"] }
rust-toolkit-trait-contracts = { version = "0.4.1", path = "../trait_contracts" }
