[workspace]

[package]
name = "rust-toolkit-trait-contracts"
version = "0.4.0"
edition = "2021"
description = "Reusable trait contract support types for the rust-toolkit policy framework"
license = "Apache-2.0"
repository = "https://github.com/hxrts/toolkit"

[dependencies]
proc-macro2 = "1"
quote = "1"
syn = { version = "2", features = ["full"] }

