[workspace]

[package]
name = "jacquard-toolkit-xtask"
version = "0.1.1"
edition = "2021"
license = "Apache-2.0"
publish = false

[dependencies]
anyhow = "1"
pulldown-cmark = "0.10"
proc-macro2 = { version = "1", features = ["span-locations"] }
regex = "1"
syn = { version = "2", features = ["full", "visit"] }
toml = "0.8"
walkdir = "2"
