[workspace]

[package]
name = "rust-toolkit-xtask"
version = "0.4.0"
edition = "2021"
license = "Apache-2.0"

[dependencies]
anyhow = "1"
pulldown-cmark = "0.10"
proc-macro2 = { version = "1", features = ["span-locations"] }
regex = "1"
serde_json = "1"
syn = { version = "2", features = ["full", "visit"] }
toml = "0.8"
walkdir = "2"
