[workspace]

[package]
name = "rust-toolkit-xtask"
version = "0.4.1"
edition = "2021"
description = "Reusable xtask command surface for the rust-toolkit policy framework"
license = "Apache-2.0"
repository = "https://github.com/hxrts/toolkit"

[dependencies]
anyhow = "1"
pulldown-cmark = "0.10"
proc-macro2 = { version = "1", features = ["span-locations"] }
regex = "1"
serde_json = "1"
syn = { version = "2", features = ["full", "visit"] }
toml = "0.8"
walkdir = "2"
