# Portable dylint lint library.
# Run under the toolkit nightly shell:
#   cargo dylint --path toolkit/lints/trait_must_use --all -- --all-targets

[package]
name = "toolkit-trait-must-use"
version = "0.2.0"
edition = "2021"
description = "Dylint check: public trait methods with non-unit return types must carry #[must_use]"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
dylint_linting = { git = "https://github.com/trailofbits/dylint.git", rev = "4bd91ce7729b74c7ee5664bbb588f7baf30b4a09", package = "dylint_linting" }

[features]
rlib = ["dylint_linting/constituent"]

[package.metadata.rust-analyzer]
rustc_private = true
